# devbridge

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
assets/icons/: tray-icon.rgba
config/: default.toml
crates/devbridge-app/: Cargo.toml  tauri.conf.json
crates/devbridge-app/capabilities/: default.json
crates/devbridge-app/src/: ipc_client.rs  main.rs  tray.rs
crates/devbridge-client/: Cargo.toml
crates/devbridge-client/src/: lib.rs  printer.rs  receiver.rs  status.rs
crates/devbridge-core/: Cargo.toml  build.rs
crates/devbridge-core/src/: client_registration.rs  config.rs  error.rs  ipc.rs  job.rs  lib.rs  proto.rs  virtual_printer.rs
crates/devbridge-dashboard/: Cargo.toml  build.rs
crates/devbridge-dashboard/src/: lib.rs  state.rs  static_files.rs
crates/devbridge-dashboard/src/api/: clients.rs  config.rs  jobs.rs  mod.rs  printers.rs  status.rs  virtual_printers.rs  ws.rs
crates/devbridge-e2e/: Cargo.toml
crates/devbridge-e2e/src/: main.rs
crates/devbridge-server/: Cargo.toml
crates/devbridge-server/src/: dispatch.rs  ipp_service.rs  lib.rs  queue.rs  storage.rs
crates/devbridge-server/tests/: grpc_transfer_test.rs  ipp_capture_test.rs  queue_record_test.rs
crates/devbridge-service/: Cargo.toml
crates/devbridge-service/src/: main.rs  runtime.rs  service.rs
crates/devbridge-ui/: Cargo.toml  Trunk.toml  index.html  manifest.json  sw.js
crates/devbridge-ui/src/: api.rs  app.rs  main.rs  ws_listener.rs
crates/devbridge-ui/src/components/: header.rs  job_card.rs  mod.rs  sidebar.rs  status_badge.rs  time_display.rs  toast.rs
crates/devbridge-ui/src/pages/: config.rs  dashboard.rs  jobs.rs  logs.rs  mod.rs  printers.rs
crates/devbridge-ui/style/: main.css
deploy/: e2e-cleanup.ps1  e2e-setup-client-local.ps1  e2e-setup-client.ps1  e2e-setup-server.ps1  e2e-wait-ready.ps1  machines.json
deploy/config-templates/: client.toml  server.toml
installer/: generate-certs.ps1  install.ps1  post-install.ps1  register-printer.ps1
proto/: devbridge.proto
tests/e2e/: full_pipeline_test.rs
tests/integration/: grpc_transfer_test.rs  ipp_capture_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
