[workspace]
resolver = "2"
members = [
    "crates/devbridge-core",
    "crates/devbridge-server",
    "crates/devbridge-client",
    "crates/devbridge-dashboard",
    "crates/devbridge-service",
    "xtask",
]
exclude = ["crates/devbridge-ui", "crates/devbridge-app", "crates/devbridge-e2e"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/zbynekdrlik/devbridge"
authors = ["Zbynek Drlik <drlik.zbynek@gmail.com>"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
anyhow = "1"
