[package]
name = "devbridge-app"
version = "0.1.0"
edition = "2024"

[dependencies]
devbridge-core = { path = "../devbridge-core" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[build-dependencies]
tauri-build = "2"
