[package]
name = "devbridge-app"
version = "0.1.0"
edition = "2024"

[dependencies]
devbridge-core = { path = "../devbridge-core" }
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[build-dependencies]
tauri-build = "2"
