[package]
name = "devbridge-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devbridge-core = { path = "../devbridge-core" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio-stream = "0.1"
hostname = "0.4"
