[package]
name = "devbridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tonic-build = "0.13"
