[package]
name = "devbridge-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devbridge-core = { path = "../devbridge-core" }
devbridge-server = { path = "../devbridge-server" }
devbridge-client = { path = "../devbridge-client" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
