[package]
name = "devbridge-dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
devbridge-core = { path = "../devbridge-core" }
devbridge-server = { path = "../devbridge-server" }
devbridge-client = { path = "../devbridge-client" }
axum = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = "1"
tempfile = "3"
chrono = { workspace = true }
tokio-tungstenite = "0.26"
futures-util = "0.3"
