[package]
name = "devbridge-e2e"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tokio-tungstenite = "0.26"
futures-util = "0.3"
